--- a/debian/control
+++ b/debian/control
@@ -24,86 +24,64 @@ Section: libdevel
 Architecture: any
 Depends: libguestfs0 (= ${binary:Version})
 Description: library for accessing and modifying guest disk images
- libguestfs is a library for accessing and modifying guest disk
- images. Amongst the things this is good for: making batch
- configuration changes to guests, viewing and editing files inside
- guests, getting disk used/free statistics (see also: virt-df),
- migrating between virtualization systems (see also: virt-p2v),
- performing partial backups, performing partial guest clones, cloning
- guests and changing registry/UUID/hostname info, and much else
- besides.
+ libguestfs is a library for accessing and modifying guest disk images. Amongst
+ the things this is good for: making batch configuration changes to guests,
+ viewing and editing files inside guests, getting disk used/free statistics,
+ migrating between virtualization systems, performing partial backups,
+ performing partial guest clones, cloning guests and changing
+ registry/UUID/hostname info, and much else besides.
  .
- libguestfs uses Linux kernel and qemu code, and can access any type of
- guest filesystem that Linux and qemu can, including but not limited
- to: ext2/3/4, btrfs, FAT and NTFS, LVM, many different disk partition
- schemes, qcow, qcow2, vmdk.
+ It uses Linux kernel and qemu code, and can access any type of guest
+ filesystem that Linux and qemu can, including but not limited to: ext2/3/4,
+ btrfs, FAT and NTFS, LVM, many different disk partition schemes, qcow, qcow2,
+ vmdk.
  .
- libguestfs provides ways to enumerate guest storage (eg. partitions,
- LVs, what filesystem is in each LV, etc.). It can also run commands in
- the context of the guest. Also you can upload and download files and
- directories.
+ libguestfs provides ways to enumerate guest storage (eg. partitions, LVs, what
+ filesystem is in each LV, etc.). It can also run commands in the context of 
+ the guest. Also you can upload and download files and directories.
  .
- libguestfs is a library that can be linked with C and C++ management
- programs (or management programs written in OCaml, Perl, Python, Ruby,
- Java or Haskell). You can also use it from shell scripts or the
- command line.
+ This package contains the development headers.
 
 Package: libguestfs0
 Architecture: any
 Depends: ${shlibs:Depends}, ${misc:Depends}
 Description: library for accessing and modifying guest disk images
- libguestfs is a library for accessing and modifying guest disk
- images. Amongst the things this is good for: making batch
- configuration changes to guests, viewing and editing files inside
- guests, getting disk used/free statistics (see also: virt-df),
- migrating between virtualization systems (see also: virt-p2v),
- performing partial backups, performing partial guest clones, cloning
- guests and changing registry/UUID/hostname info, and much else
- besides.
+ libguestfs is a library for accessing and modifying guest disk images. Amongst
+ the things this is good for: making batch configuration changes to guests,
+ viewing and editing files inside guests, getting disk used/free statistics,
+ migrating between virtualization systems, performing partial backups,
+ performing partial guest clones, cloning guests and changing
+ registry/UUID/hostname info, and much else besides.
  .
- libguestfs uses Linux kernel and qemu code, and can access any type of
- guest filesystem that Linux and qemu can, including but not limited
- to: ext2/3/4, btrfs, FAT and NTFS, LVM, many different disk partition
- schemes, qcow, qcow2, vmdk.
+ It uses Linux kernel and qemu code, and can access any type of guest
+ filesystem that Linux and qemu can, including but not limited to: ext2/3/4,
+ btrfs, FAT and NTFS, LVM, many different disk partition schemes, qcow, qcow2,
+ vmdk.
  .
- libguestfs provides ways to enumerate guest storage (eg. partitions,
- LVs, what filesystem is in each LV, etc.). It can also run commands in
- the context of the guest. Also you can upload and download files and
- directories.
- .
- libguestfs is a library that can be linked with C and C++ management
- programs (or management programs written in OCaml, Perl, Python, Ruby,
- Java or Haskell). You can also use it from shell scripts or the
- command line.
+ libguestfs provides ways to enumerate guest storage (eg. partitions, LVs, what
+ filesystem is in each LV, etc.). It can also run commands in the context of 
+ the guest. Also you can upload and download files and directories.
 
 Package: libguestfs0-dbg
 Section: debug
 Architecture: any
 Depends: ${shlibs:Depends}, ${misc:Depends}, libguestfs0 (= ${binary:Version})
 Description: library for accessing and modifying guest disk images
- libguestfs is a library for accessing and modifying guest disk
- images. Amongst the things this is good for: making batch
- configuration changes to guests, viewing and editing files inside
- guests, getting disk used/free statistics (see also: virt-df),
- migrating between virtualization systems (see also: virt-p2v),
- performing partial backups, performing partial guest clones, cloning
- guests and changing registry/UUID/hostname info, and much else
- besides.
+ libguestfs is a library for accessing and modifying guest disk images. Amongst
+ the things this is good for: making batch configuration changes to guests,
+ viewing and editing files inside guests, getting disk used/free statistics,
+ migrating between virtualization systems, performing partial backups,
+ performing partial guest clones, cloning guests and changing
+ registry/UUID/hostname info, and much else besides.
  .
- libguestfs uses Linux kernel and qemu code, and can access any type of
- guest filesystem that Linux and qemu can, including but not limited
- to: ext2/3/4, btrfs, FAT and NTFS, LVM, many different disk partition
- schemes, qcow, qcow2, vmdk.
+ It uses Linux kernel and qemu code, and can access any type of guest
+ filesystem that Linux and qemu can, including but not limited to: ext2/3/4,
+ btrfs, FAT and NTFS, LVM, many different disk partition schemes, qcow, qcow2,
+ vmdk.
  .
- libguestfs provides ways to enumerate guest storage (eg. partitions,
- LVs, what filesystem is in each LV, etc.). It can also run commands in
- the context of the guest. Also you can upload and download files and
- directories.
- .
- libguestfs is a library that can be linked with C and C++ management
- programs (or management programs written in OCaml, Perl, Python, Ruby,
- Java or Haskell). You can also use it from shell scripts or the
- command line.
+ libguestfs provides ways to enumerate guest storage (eg. partitions, LVs, what
+ filesystem is in each LV, etc.). It can also run commands in the context of 
+ the guest. Also you can upload and download files and directories.
  .
  This package contains the debugging symbols.
 
@@ -112,29 +90,21 @@ Section: python
 Architecture: any
 Depends: ${shlibs:Depends}, ${misc:Depends}
 Description: library for accessing and modifying guest disk images
- libguestfs is a library for accessing and modifying guest disk
- images. Amongst the things this is good for: making batch
- configuration changes to guests, viewing and editing files inside
- guests, getting disk used/free statistics (see also: virt-df),
- migrating between virtualization systems (see also: virt-p2v),
- performing partial backups, performing partial guest clones, cloning
- guests and changing registry/UUID/hostname info, and much else
- besides.
+ libguestfs is a library for accessing and modifying guest disk images. Amongst
+ the things this is good for: making batch configuration changes to guests,
+ viewing and editing files inside guests, getting disk used/free statistics,
+ migrating between virtualization systems, performing partial backups,
+ performing partial guest clones, cloning guests and changing
+ registry/UUID/hostname info, and much else besides.
  .
- libguestfs uses Linux kernel and qemu code, and can access any type of
- guest filesystem that Linux and qemu can, including but not limited
- to: ext2/3/4, btrfs, FAT and NTFS, LVM, many different disk partition
- schemes, qcow, qcow2, vmdk.
+ It uses Linux kernel and qemu code, and can access any type of guest
+ filesystem that Linux and qemu can, including but not limited to: ext2/3/4,
+ btrfs, FAT and NTFS, LVM, many different disk partition schemes, qcow, qcow2,
+ vmdk.
  .
- libguestfs provides ways to enumerate guest storage (eg. partitions,
- LVs, what filesystem is in each LV, etc.). It can also run commands in
- the context of the guest. Also you can upload and download files and
- directories.
- .
- libguestfs is a library that can be linked with C and C++ management
- programs (or management programs written in OCaml, Perl, Python, Ruby,
- Java or Haskell). You can also use it from shell scripts or the
- command line.
+ libguestfs provides ways to enumerate guest storage (eg. partitions, LVs, what
+ filesystem is in each LV, etc.). It can also run commands in the context of 
+ the guest. Also you can upload and download files and directories.
  .
  This package contains the Python bindings.
  
@@ -143,28 +113,20 @@ Section: doc
 Architecture: all
 Depends: ${shlibs:Depends}, ${misc:Depends}
 Description: library for accessing and modifying guest disk images
- libguestfs is a library for accessing and modifying guest disk
- images. Amongst the things this is good for: making batch
- configuration changes to guests, viewing and editing files inside
- guests, getting disk used/free statistics (see also: virt-df),
- migrating between virtualization systems (see also: virt-p2v),
- performing partial backups, performing partial guest clones, cloning
- guests and changing registry/UUID/hostname info, and much else
- besides.
+ libguestfs is a library for accessing and modifying guest disk images. Amongst
+ the things this is good for: making batch configuration changes to guests,
+ viewing and editing files inside guests, getting disk used/free statistics,
+ migrating between virtualization systems, performing partial backups,
+ performing partial guest clones, cloning guests and changing
+ registry/UUID/hostname info, and much else besides.
  .
- libguestfs uses Linux kernel and qemu code, and can access any type of
- guest filesystem that Linux and qemu can, including but not limited
- to: ext2/3/4, btrfs, FAT and NTFS, LVM, many different disk partition
- schemes, qcow, qcow2, vmdk.
+ It uses Linux kernel and qemu code, and can access any type of guest
+ filesystem that Linux and qemu can, including but not limited to: ext2/3/4,
+ btrfs, FAT and NTFS, LVM, many different disk partition schemes, qcow, qcow2,
+ vmdk.
  .
- libguestfs provides ways to enumerate guest storage (eg. partitions,
- LVs, what filesystem is in each LV, etc.). It can also run commands in
- the context of the guest. Also you can upload and download files and
- directories.
- .
- libguestfs is a library that can be linked with C and C++ management
- programs (or management programs written in OCaml, Perl, Python, Ruby,
- Java or Haskell). You can also use it from shell scripts or the
- command line.
+ libguestfs provides ways to enumerate guest storage (eg. partitions, LVs, what
+ filesystem is in each LV, etc.). It can also run commands in the context of 
+ the guest. Also you can upload and download files and directories.
  .
  This package contains the documentation.
