add perl bindings

--- a/debian/rules
+++ b/debian/rules
@@ -37,5 +37,6 @@ clean::
 	       appliance/debian/vmlinuz-* \
 	       appliance/debian/*.cgz \
 	       appliance/*.bak
+	rm -rf perl/blib/ perl/*.o
 	rm -f src/.pod2text.data po/*.gmo
 	rm -f debian/autogen.stamp
