--- a/debian/control
+++ b/debian/control
@@ -3,9 +3,14 @@ Section: libs
 Priority: extra
 Maintainer: Debian Libvirt Maintainers <pkg-libvirt-maintainers@lists.alioth.debian.org>
 Uploaders: Richard Jones <rjones@redhat.com>, Guido Günther <agx@sigxcpu.org>
-Build-Depends: debhelper (>= 7), autotools-dev, quilt, python-support,
-  automake, autoconf, libtool, debirf, libreadline-dev, squashfs-tools, cdbs,
-  python-dev, ocaml
+Build-Depends: debhelper (>= 7), autotools-dev, quilt,
+  debirf, libreadline-dev, squashfs-tools, cdbs,
+# when building from git:
+  automake, autoconf, libtool, ocaml,
+# for python bindings:
+  python-dev, python-support,
+# for the perl bindings:
+  libtest-pod-coverage-perl, libextutils-command-perl
 Homepage: http://libguestfs.org
 Standards-Version: 3.8.2
 
@@ -131,4 +136,27 @@ Description: library for accessing and modifying guest disk images
  the guest. Also you can upload and download files and directories.
  .
  This package contains the Python bindings.
+ 
+Package: libguestfs-perl
+Section: perl
+Architecture: any
+Depends: ${shlibs:Depends}, ${misc:Depends}
+Description: library for accessing and modifying guest disk images
+ libguestfs is a library for accessing and modifying guest disk images. Amongst
+ the things this is good for: making batch configuration changes to guests,
+ viewing and editing files inside guests, getting disk used/free statistics,
+ migrating between virtualization systems, performing partial backups,
+ performing partial guest clones, cloning guests and changing
+ registry/UUID/hostname info, and much else besides.
+ .
+ It uses Linux kernel and qemu code, and can access any type of guest
+ filesystem that Linux and qemu can, including but not limited to: ext2/3/4,
+ btrfs, FAT and NTFS, LVM, many different disk partition schemes, qcow, qcow2,
+ vmdk.
+ .
+ libguestfs provides ways to enumerate guest storage (eg. partitions, LVs, what
+ filesystem is in each LV, etc.). It can also run commands in the context of 
+ the guest. Also you can upload and download files and directories.
+ .
+ This package contains the Perl bindings.
  
