--- a/debian/rules
+++ b/debian/rules
@@ -26,6 +26,9 @@ install/python-guestfs::
 		mv $${mod} $$(dirname $${mod})/libguestfsmod.so; \
 	done
 
+install/guestfish::
+	install -m 755 inspector/virt-inspector.pl debian/tmp/usr/bin/virt-inspector
+
 debian/autogen.stamp:
 	./autogen.sh
 	touch debian/autogen.stamp
