--- a/debian/rules
+++ b/debian/rules
@@ -11,6 +11,12 @@ include /usr/share/cdbs/1/class/autotools.mk
 include /usr/share/cdbs/1/class/python-distutils.mk
 include /usr/share/cdbs/1/rules/patchsys-quilt.mk
 
+DEBIAN_SKIP_TEST := \
+	SKIP_TEST_HEXDUMP_0 \
+	SKIP_TEST_HEXDUMP_1 \
+	SKIP_TEST_VGS_1
+
+
 DEB_CONFIGURE_EXTRA_FLAGS := \
 	--with-readline		\
 	--with-repo=${REPO}     \
@@ -19,6 +25,21 @@ DEB_CONFIGURE_EXTRA_FLAGS := \
 DEB_DBG_PACKAGES = libguestfs0-dbg
 DEB_PYTHON_SETUP_CMD := /dev/null
 DEB_DH_MAKESHLIBS_ARGS_python-guestfs = -X usr/lib/pyshared
+
+# make sure the debirf symlinks get created:
+configure/guestfish::
+	cd appliance; make stamp-debirf-modules
+
+ifeq (,$(findstring nocheck,$(DEB_BUILD_OPTIONS)))
+debian/check-stamp:
+	for TEST in ${DEBIAN_SKIP_TEST}; do \
+	    export $$TEST=1; \
+	done; \
+	make check
+	touch debian/check-stamp
+
+build/guestfish:: debian/check-stamp
+endif
 
 install/python-guestfs::
 	rm -f debian/tmp/usr/lib/python*/*/libguestfsmod.so
@@ -29,9 +50,6 @@ install/python-guestfs::
 install/guestfish::
 	install -m 755 inspector/virt-inspector.pl debian/tmp/usr/bin/virt-inspector
 
-configure/guestfish::
-	cd appliance; make stamp-debirf-modules
-
 clean::
 	rm -rf appliance/debian/root \
 	       appliance/debian/nest \
@@ -40,4 +58,4 @@ clean::
 	       appliance/*.bak
 	rm -rf perl/blib/ perl/*.o
 	rm -f src/.pod2text.data po/*.gmo
-	rm -f debian/autogen.stamp
+	rm -f debian/check-stamp
