Drop patch 0001-add-nls_base.ko-and-nls_cp437.ko-for-vfat.patch.
Fixed upstream.

--- a/debian/control
+++ b/debian/control
@@ -3,7 +3,7 @@ Section: libs
 Priority: extra
 Maintainer: Debian Libvirt Maintainers <pkg-libvirt-maintainers@lists.alioth.debian.org>
 Uploaders: Richard Jones <rjones@redhat.com>, Guido Günther <agx@sigxcpu.org>
-Build-Depends: debhelper (>= 7), autotools-dev, quilt,
+Build-Depends: debhelper (>= 7), autotools-dev,
   debirf, libreadline-dev, squashfs-tools, cdbs, libaugeas-dev, qemu,
 # when building from git:
   automake, autoconf, libtool, ocaml,
