--- a/debian/control
+++ b/debian/control
@@ -2,7 +2,7 @@ Source: libguestfs
 Section: libs
 Priority: extra
 Maintainer: Debian Libvirt Maintainers <pkg-libvirt-maintainers@lists.alioth.debian.org>
-Uploaders: Richard Jones <rjones@redhat.com>, Guido Günther <agx@sigxcpu.org>
+Uploaders: Richard Jones <rjones@redhat.com>, Guido Günther <agx@sigxcpu.org>, Hilko Bengen <bengen@debian.org>
 Build-Depends: debhelper (>= 7), autotools-dev, aptitude,
   debirf, libreadline-dev, squashfs-tools, cdbs, libaugeas-dev,
 # QEMU
