--- a/debian/rules
+++ b/debian/rules
@@ -1,60 +1,18 @@
 #!/usr/bin/make -f
 
-DEB_PYTHON_SYSTEM=pysupport
-DEB_DH_INSTALL_SOURCEDIR = debian/tmp
-DEB_VENDOR=$(shell dpkg-vendor --query vendor)
+override_dh_auto_clean:
+	test -f Makefile && $(MAKE) distclean || true
 
-ifeq (Debian,$(DEB_VENDOR))
-  MIRROR=http://ftp.debian.org/debian
-  REPO=sid
-else
-ifeq (Ubuntu,$(DEB_VENDOR))
-   MIRROR=http://gb.archive.ubuntu.com/ubuntu/
-   REPO=karmic
-endif
-endif
+override_dh_auto_configure:
+	dh_auto_configure -- \
+		--with-readline	     \
+		--with-java-home=no  \
+		--disable-ruby       \
+		--disable-haskell    \
+		--disable-php
 
-include /usr/share/cdbs/1/rules/debhelper.mk
-include /usr/share/cdbs/1/class/autotools.mk
-include /usr/share/cdbs/1/class/python-distutils.mk
-include /usr/share/cdbs/1/rules/patchsys-quilt.mk
+override_dh_strip:
+	dh_strip --dbg-package=libguestfs0-dbg
 
-DEB_CONFIGURE_EXTRA_FLAGS := \
-	--with-readline		\
-	--with-repo=${REPO}     \
-        --with-mirror=${MIRROR}
-
-DEB_DBG_PACKAGES = libguestfs0-dbg
-DEB_PYTHON_SETUP_CMD := /dev/null
-DEB_DH_MAKESHLIBS_ARGS_python-guestfs = -X usr/lib/pyshared
-
-# make sure the debirf symlinks get created:
-configure/guestfish::
-	cd appliance; make stamp-debirf-modules
-
-ifeq (,$(findstring nocheck,$(DEB_BUILD_OPTIONS)))
-debian/check-stamp:
-	for TEST in ${DEBIAN_SKIP_TEST}; do \
-	    export $$TEST=1; \
-	done; \
-	make check
-	touch debian/check-stamp
-
-build/guestfish:: debian/check-stamp
-endif
-
-install/python-guestfs::
-	rm -f debian/tmp/usr/lib/python*/*/libguestfsmod.so
-	for mod in debian/tmp/usr/lib/python*/*/libguestfsmod.so.0.0.0; do \
-		mv $${mod} $$(dirname $${mod})/libguestfsmod.so; \
-	done
-
-clean::
-	rm -rf appliance/debian/root \
-	       appliance/debian/nest \
-	       appliance/debian/vmlinuz-* \
-	       appliance/debian/*.cgz \
-	       appliance/*.bak
-	rm -rf perl/blib/ perl/*.o
-	rm -f src/.pod2text.data
-	rm -f debian/check-stamp
+%:
+	dh --with=autotools-dev,ocaml,python2 $@
