--- a/debian/rules
+++ b/debian/rules
@@ -14,6 +14,9 @@ override_dh_auto_configure:
 override_dh_strip:
 	dh_strip --dbg-package=libguestfs0-dbg
 
+override_dh_auto_build:
+	$(MAKE) INSTALLDIRS=vendor LD_RUN_PATH=""
+
 override_dh_install:
 # workaround for #635316
 	rm debian/tmp/usr/lib/python2.6/dist-packages/libguestfsmod.a \
