--- a/debian/rules
+++ b/debian/rules
@@ -26,6 +26,14 @@ override_dh_install:
 	mv debian/tmp/usr/lib/python2.6/dist-packages/libguestfsmod.so.0.0.0 \
 	   debian/tmp/usr/lib/python2.6/dist-packages/libguestfsmod.so
 
+# Workaround for:
+# W: libguestfs-perl: script-not-executable usr/lib/perl5/Sys/bindtests.pl
+	rm debian/tmp/usr/lib/perl5/Sys/bindtests.pl
+
+# Workaround for:
+# E: libguestfs-dev: non-empty-dependency_libs-in-la-file usr/lib/libguestfs.la
+	find debian/tmp -name *.la | xargs sed -i '/^dependency_libs/ s/^/# /'
+
 	dh_install
 
 override_dh_python2:
