--- a/Makefile.in
+++ b/Makefile.in
@@ -1762,7 +1762,7 @@ all-local:
 # is NOT a substitute for proper testing!
 
 quickcheck:
-	./run test-tool/libguestfs-test-tool
+	./run test-tool/libguestfs-test-tool $(QUICKCHECK_TEST_TOOL_ARGS)
 bindist:
 	rm -rf $(BINTMPDIR)
 	mkdir $(BINTMPDIR)
