--- a/debian/rules
+++ b/debian/rules
@@ -5,6 +5,7 @@ override_dh_auto_clean:
 
 override_dh_auto_configure:
 	dh_auto_configure -- \
+		--enable-install-daemon \
 		--disable-appliance  \
 		--with-readline	     \
 		--with-java-home=no  \
