--- a/debian/rules
+++ b/debian/rules
@@ -6,6 +6,8 @@ PYTHONS        := $(filter-out python2.5, $(shell pyversions --installed; py3ver
 PYTHON_DEFAULT := $(shell pyversions --default)
 RUBIES         := $(shell find /usr/bin/ -name ruby1\* | xargs -n1 readlink -f | xargs -n1 basename)
 RUBY_DEFAULT   := $(shell which ruby | xargs readlink -f | xargs basename)
+LUAS           := lua5.1 lua5.2
+LUA_DEFAULT    := lua5.1
 
 DEFAULT_CONFIG_FLAGS = \
 	--disable-appliance  \
@@ -25,6 +27,7 @@ override_dh_auto_clean:
 		default \
 		$(filter-out $(PYTHON_DEFAULT), $(PYTHONS)) \
 		$(filter-out $(RUBY_DEFAULT), $(RUBIES)) \
+		$(filter-out $(LUA_DEFAULT), $(LUAS)) \
 	; do \
 		dh_auto_clean --builddir=$(CURDIR)/debian/build-$$p ; \
 	done
@@ -38,6 +41,7 @@ override_dh_auto_configure:
 		RUBY=$(RUBY_DEFAULT) \
 		RAKE=$(patsubst ruby%,rake%,$(RUBY_DEFAULT)) \
 		PYTHON=$(PYTHON_DEFAULT) \
+		LUA=$(LUA_DEFAULT) \
 		JNI_INSTALL_DIR='$${libdir}/jni'
 
 	set -e; for v in $(patsubst ruby%,%,$(filter-out $(RUBY_DEFAULT), $(RUBIES))) \
@@ -46,6 +50,7 @@ override_dh_auto_configure:
 		dh_auto_configure --builddir=$(CURDIR)/debian/build-ruby$$v \
 			-- \
 			$(BARE_CONFIG_FLAGS) \
+			--disable-lua \
 			--disable-python \
 			RUBY=ruby$$v RAKE=$$rake ; \
 	done
@@ -55,8 +60,19 @@ override_dh_auto_configure:
 		dh_auto_configure --builddir=$(CURDIR)/debian/build-$$p \
 			-- \
 			$(BARE_CONFIG_FLAGS) \
+			--disable-lua \
 			--disable-ruby \
 			PYTHON=$$p ; \
+	done
+
+	set -e; for p in $(filter-out $(LUA_DEFAULT), $(LUAS)) \
+	; do \
+		dh_auto_configure --builddir=$(CURDIR)/debian/build-$$p \
+			-- \
+			$(BARE_CONFIG_FLAGS) \
+			--disable-python \
+			--disable-ruby \
+			LUA=$$p ; \
 	done
 
 override_dh_strip:
@@ -75,6 +91,7 @@ override_dh_auto_build:
 	set -e; for p in \
 		$(filter-out $(PYTHON_DEFAULT), $(PYTHONS)) \
 		$(filter-out $(RUBY_DEFAULT), $(RUBIES)) \
+		$(filter-out $(LUA_DEFAULT), $(LUAS)) \
 	; do \
 		dh_auto_build --builddir=$(CURDIR)/debian/build-$$p ; \
 	done
@@ -84,6 +101,7 @@ override_dh_auto_test:
 		default \
 		$(filter-out $(PYTHON_DEFAULT), $(PYTHONS)) \
 		$(filter-out $(RUBY_DEFAULT), $(RUBIES)) \
+		$(filter-out $(LUA_DEFAULT), $(LUAS)) \
 	; do \
 		dh_auto_test --builddir=$(CURDIR)/debian/build-$$p \
 			-- CFLAGS="$(filter-out -Werror=format-security,$(CFLAGS))"; \
@@ -96,6 +114,7 @@ override_dh_auto_install:
 	set -e; for p in \
 		$(filter-out $(PYTHON_DEFAULT), $(PYTHONS)) \
 		$(filter-out $(RUBY_DEFAULT), $(RUBIES)) \
+		$(filter-out $(LUA_DEFAULT), $(LUAS)) \
 		default \
 	; do \
 		dh_auto_install --builddir=$(CURDIR)/debian/build-$$p ; \
@@ -144,4 +163,4 @@ override_dh_makeshlibs:
 %:
 	dh $@ \
 	   --without=python-support \
-	   --with=autoreconf,ocaml,python2,python3,bash-completion,ruby,gir
+	   --with=autoreconf,ocaml,python2,python3,bash-completion,ruby,gir,lua
